fixed z-index

--- a/public/css/application.styl
+++ b/public/css/application.styl
@@ -4,6 +4,7 @@ body
 	padding-bottom 75px
 
 #header
+	z-index 100
 	.played
 		background #F60
 		height 5px
